--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-6.91MB/s(Youtube:不良林), server: tw.suntory.lol, port: 38511, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-852.2KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-461.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-550.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-855.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇫🇷 法国-1.85MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
 rules:
