--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-461.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-550.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.27MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-996.2KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-5.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-196.5KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-461.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-996.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-196.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
