--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-497.9KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇮🇳 印度-1.18MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-257.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.85MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
   - {name: 🇨🇳 中国-882.6KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-497.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
